# ChangeLog for sys-apps/calculate-utilities
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-utilities-2.2.14 (20 Apr 2011)

  20 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.14.ebuild:
  Bump version

  13 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-utilities-2.2.12-r10.ebuild,
  -calculate-utilities-2.2.12-r11.ebuild,
  -calculate-utilities-2.2.12-r12.ebuild,
  -calculate-utilities-2.2.12-r13.ebuild,
  -calculate-utilities-2.2.12-r14.ebuild, calculate-utilities-2.2.13.ebuild,
  calculate-utilities-2.2.9999.ebuild:
  Remove old. Fix EAPI.

*calculate-utilities-2.2.12-r14 (06 Apr 2011)

  06 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r14.ebuild:
  Update for templates.

*calculate-utilities-2.2.9999 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.9999.ebuild:
  Added live ebuild.


*calculate-utilities-2.2.12-r13 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r13.ebuild:
  Update for templates.

*calculate-utilities-2.2.12-r12 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r12.ebuild:
  Update for calculate-lib.

*calculate-utilities-2.2.12-r11 (04 Apr 2011)

  04 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r11.ebuild:
  Update for lib.

*calculate-utilities-2.2.12-r9 (29 Mar 2011)

  29 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r9.ebuild:
  Update for lib and templates.

*calculate-utilities-2.2.12-r8 (29 Mar 2011)

  29 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-utilities-2.2.12-r8.ebuild:
  Update for templates.

*calculate-utilities-2.2.12-r7 (28 Mar 2011)

  28 Mar 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>