@@ -1,5 +1,6 @@
 EBUILD calculate-utilities-2.2.13-r1.ebuild 829 RMD160 356e34c0e993680aa7b97083f22bae183a1994a7 SHA1 3ef2c673fe2de8d82e075372e86920cc6ed7b68d SHA256 d000ff376be9885beea78bef04ad3908163761c34afa01f01dac4815f43d9356
 EBUILD calculate-utilities-2.2.13.ebuild 826 RMD160 19ffb89c43a416fc2f4b8a1f27ef7aba2cba7a1e SHA1 62a5ee415821bf5dc7a99f43c736ad210c74da31 SHA256 be6a76a4143b90786d584608c72e59e85bb188826b783685a9973cadaa9dbffd
+EBUILD calculate-utilities-2.2.14-r1.ebuild 832 RMD160 7910f7e37d022f057c2f22f472829aaa8ef348db SHA1 b22185f43b0176b2c1390415f9820cfc443eddfa SHA256 4ae0bbb1aa1f6f530c32eafe4c98331391552880f02a5f9540878e6fc49a65fa
 EBUILD calculate-utilities-2.2.14.ebuild 829 RMD160 ca16f926dbac23f8a83595b70723e07b362a3c06 SHA1 e952c7e4909082540bbf3ca1bc745a223880116a SHA256 8ce1c42a0a19e39d7db7b4e944f59b867d9f3c44c71df6ea3573dae9de83a7d5
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
-MISC ChangeLog 6991 RMD160 0744c4b0585b750da04ec7955fe1db5c40ec0fa1 SHA1 91d27f60a2db1d716318fe763ee961a93f398a45 SHA256 95c0e7b118ddf0ed9e0d6aea43522a9d011c7147a73f518b53466a81f41906fb
+MISC ChangeLog 7161 RMD160 e0ef095370f828299409de800548f7f4b2240c4a SHA1 6e8c1f1f2ba8efeca09fecebeefe50293692c084 SHA256 e53e707a063ab8297bc4a435c05307456c0974fd43035e5cc8066c28ff68bd25
