@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-utilities-2.2.14-r1 (20 Apr 2011)
+
+  20 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-utilities-2.2.14-r1.ebuild:
+  Update for install.
+
 *calculate-utilities-2.2.14 (20 Apr 2011)
 
   20 Apr 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
